--- a/templates/index.html
+++ b/templates/index.html
@@ -269,7 +269,7 @@ a {text-decoration: none;color: black;}
       type: "GET",
       dataType:'json',
       timeout: 240000,
-      url: "http://nlp.nunocardoso.eu:5000/query/"+query,
+      url: "http://127.0.0.1:5000/query/"+query,
       success: function(data){
        $.ajax({
         type: "GET",
